<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="screen_enter_email_title">Введите \n электронную почту</string>
    <string name="screen_enter_email_hint">Ваш email</string>
    <string name="screen_enter_email_code_hint">Мы отправим вам код \n подтверждения</string>
    <string name="screen_enter_email_continue">Продолжить</string>
    <string name="screen_enter_email_continue_hint">Нажимая кнопку \“Продолжить\”, вы соглашаетесь \n с политикой конфиденциальности и на обработку \n персональных данных</string>

    <string name="screen_enter_code_title">Введите \n полученный код</string>
    <string name="screen_enter_code_hint">Введите 4-значный номер, который был \n отправлен на ваш email %1$s</string>
    <string name="screen_enter_code_continue">Продолжить</string>
    <string name="screen_enter_code_timer"><![CDATA[Отправить код повторно через <font color="%1$s"> %2$s </font>]]></string>
    <string name="screen_enter_code_send_code"><![CDATA[<font color="%1$s"><u>Отправить код повторно</u></font>]]></string>

    <string name="screen_family_access_title">Семейный доступ</string>
    <string name="screen_family_access_title_hint">Пригласите членов семьи использовать ваш список покупок и список продуктов в холодильнике</string>
    <string name="screen_family_access_enter_hint">Введите email члена семьи / друга для добавления его аккаунта в семеный доступ</string>
    <string name="screen_family_access_email_hint">Email члена семьи / друга</string>
    <string name="screen_family_access_send">Отправить приглашение</string>
    <string name="screen_family_acess_empty_spaces">Есть %1$d свободных места</string>
    
</resources>