<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    style="@style/MatchParent">


    <include
        layout="@layout/layout_back_button_header"
        android:id="@+id/header"
        style="@style/MatchParentWrapContent"
        android:text="@string/screen_enter_code_title"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/email_edit"
        style="@style/EditText"
        android:layout_marginTop="100dp"
        android:padding="16dp"
        android:inputType="textEmailAddress"
        android:textColor="@color/black"
        android:hint="@string/screen_enter_email_hint"
        android:textColorHint="?attr/text_secondary"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/header" />

    <TextView
        android:id="@+id/code_hint"
        style="@style/Text.H4.Hint"
        android:layout_marginTop="124dp"
        android:gravity="center"
        android:text="@string/screen_enter_email_code_hint"
        app:layout_constraintBottom_toTopOf="@id/continue_btn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/email_edit" />

    <Button
        android:id="@+id/continue_btn"
        style="@style/Button.Active"
        android:layout_marginTop="40dp"
        android:text="@string/screen_enter_email_continue"
        android:enabled="false"
        app:layout_constraintBottom_toTopOf="@id/continue_hint"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/code_hint" />

    <TextView
        android:id="@+id/continue_hint"
        style="@style/Text.H4.Hint"
        android:layout_marginVertical="24dp"
        android:text="@string/screen_enter_email_continue_hint"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/continue_btn"
        app:layout_constraintBottom_toBottomOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>