<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    style="@style/MatchParent">

    <include
        layout="@layout/layout_back_button_header"
        android:id="@+id/header"
        style="@style/MatchParentWrapContent"
        android:text="@string/screen_enter_code_title"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <com.jakode.verifycodeedittext.VerifyCodeEditText
        android:id="@+id/code_edit"
        style="@style/WrapContent"
        android:layout_marginTop="190dp"
        android:inputType="number"
        app:ViewCount="Four"
        app:ItemSpaceSize="20dp"
        app:BottomIconWidth="52dp"
        app:TextColor="?attr/text_primary"
        app:TextSize="15sp"
        app:TextFont="@font/poppins_regular"
        app:BottomSelectedIcon="?attr/text_primary"
        app:BottomUnSelectedIcon="?attr/text_secondary"
        app:BottomIconHeight="2dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toTopOf="@id/code_hint"
        app:layout_constraintTop_toBottomOf="@id/header"/>

    <TextView
        android:id="@+id/code_hint"
        style="@style/Text.H4.Hint"
        android:layout_marginTop="48dp"
        android:gravity="center"
        android:text="@string/screen_enter_code_hint"
        app:layout_constraintBottom_toTopOf="@id/continue_btn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/code_edit" />

    <Button
        android:id="@+id/continue_btn"
        style="@style/Button.Active"
        android:layout_marginTop="40dp"
        android:text="@string/screen_enter_code_continue"
        android:enabled="false"
        app:layout_constraintBottom_toTopOf="@id/timer"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/code_hint" />

    <TextView
        android:id="@+id/timer"
        style="@style/Text.H4.Hint"
        android:layout_marginVertical="36dp"
        android:text="@string/screen_enter_code_timer"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/continue_btn"
        app:layout_constraintBottom_toBottomOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>